Update AUTHORS file.

--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,4 @@ Matthias Fehring (https://www.buschmann23.de) - Main developer, German translati
 Åke Engelbrektson (https://svenskasprakfiler.se) - Swedish translation
 Nathan Follens - Dutch translation
 Peter Jespersen (http://illogical.dk/) - Danish translation
+Paola Aristizabal - Spanish (Latin America) translation
