--- a/AUTHORS
+++ b/AUTHORS
@@ -3,3 +3,5 @@ Matthias Fehring (https://www.buschmann23.de) - Main developer, German translati
 Nathan Follens - Dutch translation
 Peter Jespersen (http://illogical.dk/) - Danish translation
 Paola Aristizabal - Spanish (Latin America) translation
+Antoine Vacher - French translation
+Jenny Esmeralda Robles Escamilla - Spanish translation
