Add Chinese translation by rui kon

--- a/AUTHORS
+++ b/AUTHORS
@@ -5,3 +5,4 @@ Peter Jespersen (http://illogical.dk/) - Danish translation
 Paola Aristizabal - Spanish (Latin America) translation
 Antoine Vacher - French translation
 Jenny Esmeralda Robles Escamilla - Spanish translation
+Rui Kon - Chinese translation
