--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+HBN SFOS Components 1.3.2 - 2018-12-02
+- new: Chinese translation by rui kon
+
 HBN SFOS Components 1.3.1 - 2018-11-30
 - fix font sizes on About page
 - translation updates
