--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+HBN SFOS Components 1.3.3 - 2018-12-04
+* fixed: missing translation strings for en_US and en_GB
+
 HBN SFOS Components 1.3.2 - 2018-12-02
 - new: Chinese translation by rui kon
 
