--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+HBN SFOS Components 1.4.1 - 2018-12-11
+* new: add Hbnsc::getIconsDir() to select directory containing
+  icons apropriate for the current pixel ratio
+
 HBN SFOS Components 1.4.0 - 2018-12-10
 * new: add function to get best fitting launcher icon
 * new: add Hbnsc::version() function
