--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+HBN SFOS Components 1.4.2 - 2019-05-15
+* new: add Hbnsc::loadTranslations() to load the appropriate translation
+
 HBN SFOS Components 1.4.1 - 2018-12-11
 * new: add Hbnsc::getIconsDir() to select directory containing
   icons apropriate for the current pixel ratio
