--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+HBN SFOS Components 1.5.3 - 2019-06-05
+* new: Creative Commons Attribution 3.0 Unported Public License
+* new: Creative Commons Sampling Plus 1.0 Public License
+* new: Creative Commons Zero 1.0 Universal Public Domain Dedication
+
 HBN SFOS Components 1.5.2 - 2019-06-05
 * new: easier creation of icon providers
 
