--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+HBN SFOS Components 1.5.4 - 2019-06-17
+* improved: small internal things
+
 HBN SFOS Components 1.5.3 - 2019-06-05
 * new: Creative Commons Attribution 3.0 Unported Public License
 * new: Creative Commons Sampling Plus 1.0 Public License
