--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+HBN SFOS Components 1.5.5 - 2019-06-18
+* improved: add auto select constructo to LanguageModel
+
 HBN SFOS Components 1.5.4 - 2019-06-17
 * improved: small internal things
 
