--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+HBN SFOS Components 1.5.6 - 2019-06-18
+* improved: automatically add some entries to the Qt/C++ licenses
+  model if they are used (currently: OpenSSL, nemonotifications-qt5,
+  SQLite and libdbus-1)
+
 HBN SFOS Components 1.5.5 - 2019-06-18
 * improved: add auto select constructo to LanguageModel
 
