Improve CMake installation

--- a/translations/CMakeLists.txt
+++ b/translations/CMakeLists.txt
@@ -1,8 +1,8 @@
 include(HBNSfosGenerateTranslations)
 
-hbn_sfos_gen_translation(hbnsfoscomptrans IDBASED INPUT_FILE hbnsc.ts)
+hbn_sfos_gen_translation(hbnsfoscomptrans IDBASED INSTALL_DESTINATION ${HBNSC_I18NDIR} INPUT_FILE hbnsc.ts)
 
 set(_langs da de en_GB en_US es es_419 fr nl sv zh)
 foreach(_lang ${_langs})
-    hbn_sfos_gen_translation(hbnsfoscomptrans IDBASED INPUT_FILE hbnsc_${_lang}.ts)
+    hbn_sfos_gen_translation(hbnsfoscomptrans IDBASED INSTALL_DESTINATION ${HBNSC_I18NDIR} INPUT_FILE hbnsc_${_lang}.ts)
 endforeach()
