--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+HBN SFOS Components 1.6.1 - 2022-02-20
+* fixed: set some CMake variables to correct values
+
 HBN SFOS Components 1.6.0 - 2022-02-20
 * new: CMake support, therefore it now requires HBN SFOS Cmake
   in the build tree
