--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+HBN SFOS Components 1.6.6 - 2025-09-05
+* fixed: select correct scale directory for icons
+* changed: Twitter is now X
+
 HBN SFOS Components 1.6.5 - 2022-03-26
 * new: add libstdc++ to the list of used 3rd party applications
 * new: GPLv3 and GCC Runtime Library Exception license file
