--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+HBN SFOS Components 1.6.7 - 2025-09-05
+* fixed: ContributorsDelegate show link to X everywhere
+
 HBN SFOS Components 1.6.6 - 2025-09-05
 * fixed: select correct scale directory for icons
 * changed: Twitter is now X
